--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,15 +9,41 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.tac.kulik.wavelibrary.MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
 
     <com.tac.kulik.waveaudiovizualization.VoiceWaveViewTV
         android:id="@+id/waveView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></com.tac.kulik.waveaudiovizualization.VoiceWaveViewTV>
-</RelativeLayout>
+        android:layout_height="100dp"></com.tac.kulik.waveaudiovizualization.VoiceWaveViewTV>
+
+    <RelativeLayout
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        tools:background="#aa00">
+
+        <com.tac.kulik.waveaudiovizualization.VoiceView
+            android:id="@+id/voiceCircle2"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_centerInParent="true"
+            app:color="#1937474f" />
+
+        <com.tac.kulik.waveaudiovizualization.VoiceView
+            android:id="@+id/voiceCircle1"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_centerInParent="true"
+            app:color="#b3607d8b"
+            app:scale="0.9"
+            />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/recordingBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            app:srcCompat="@drawable/ic_record_voice_microphone_button" />
+    </RelativeLayout>
+</LinearLayout>
